--- a/reader.html
+++ b/reader.html
@@ -3,9 +3,10 @@
         <meta charset="utf-8"/>
 	<title>Ji Zhu Reader</title>
         <link rel="stylesheet" href="css/reader.css" />
+        <base target="_blank" />
     </head>
     <body>
-        <header class="header"></header>
+        <header class="header" id="header"></header>
         <section class="content-wrap">
             <div class="title" id="title"></div>
             <article class="article" id="article"></article>
