--- a/reader.html
+++ b/reader.html
@@ -2,16 +2,18 @@
     <head>
         <meta charset="utf-8"/>
 	<title>Ji Zhu Reader</title>
+        <link rel="stylesheet" href="css/prettify.css" />
         <link rel="stylesheet" href="css/reader.css" />
         <base target="_blank" />
     </head>
     <body>
-        <header class="header" id="header"></header>
-        <section class="content-wrap">
-            <div class="title" id="title"></div>
-            <article class="article" id="article"></article>
+        <header class="jz-header" id="jz-header"></header>
+        <section class="jz-contentwrap">
+            <div class="jz-title" id="jz-title"></div>
+            <article class="jz-article" id="jz-article"></article>
         </section>
 	<script src="js/lib/jquery-1.7.2.min.js"></script>
+        <script src="js/lib/prettify.js"></script>
         <script src="js/reader.js"></script>
     </body>
 </html>
