--- a/reader.html
+++ b/reader.html
@@ -17,7 +17,7 @@
         <section class="jz-contentwrap" id="jz-contentwrap">
             <div class="jz-title" id="jz-title"></div>
             <div class="jz-subtitle" id="jz-subtitle"></div>
-            <article class="jz-article" id="jz-article"></article>
+            <article class="jz-article loading" id="jz-article"></article>
         </section>
         <script src="js/lib/jquery-1.10.1.min.js"></script>
         <script src="js/lib/prettify.js"></script>
