--- a/options.html
+++ b/options.html
@@ -4,26 +4,29 @@
         <meta charset="utf-8"/>
         <title>{{JiZhuReaderOption}}</title>
         <link rel="stylesheet" href="css/options.css" type="text/css" />
+        <base target="_blank" />
     </head>
     <body>
         <div class="wrapper">
             <div class="settings">
-                <h2 class="title" id="option">{{Option}}</h2>
+                <h2 class="title i18n" data-i18n="Option"></h2>
                 <div class="content">
                     <ul>
                         <li>
-                            <div class="optionname" id="readerfontsize">{{ReaderFontSize}}</div>
+                            <div class="optionname i18n" data-i18n="ReaderFontSize"></div>
                             <div class="optionset">
-                                <p class="tiptext"><label><input id="fontsize" type="range" name="fontsize" min="12" max="20" step="2" value="16" /><span></span></label></p>
-                                <div class="demonstrate" id="demonstratefontsize">{{DemonstrateFontSize}}</div>
+                                <div class="tiptext">
+                                    <label><input id="fontsize" type="range" name="fontsize" min="12" max="20" step="2" value="16" /><span></span></label>
+                                </div>
+                                <div id="demonstratefontsize" class="demonstrate i18n" data-i18n="ExtensionName"></div>
                             </div>
                         </li>
                     </ul>
                 </div>
             </div>
-            <div class="copyright" id="copyright">{{Copyright}}</div>
+            <div class="copyright i18n" data-i18n="Copyright"></div>
         </div>
-        <script src="js/lib/jquery-1.10.1.min.js"></script>
+        <script src="js/lib/jquery-1.10.2.min.js"></script>
         <script src="js/settings.js"></script>
         <script src="js/options.js"></script>
     </body>
