--- a/reader.html
+++ b/reader.html
@@ -8,7 +8,7 @@
         <base target="_blank" />
     </head>
     <body>
-	<section class="jz-sider">
+	<section class="jz-sider" id="jz-sider">
 	    <div class="jz-actionbtn jz-closebtn" id="jz-closebtn"></div>
 	    <div class="jz-actionbtn jz-editbtn" id="jz-editbtn"></div>
 	    <div class="jz-actionbtn jz-printbtn" id="jz-printbtn"></div>
@@ -19,7 +19,7 @@
             <div class="jz-subtitle" id="jz-subtitle"></div>
             <article class="jz-article loading" id="jz-article"></article>
         </section>
-        <script src="js/lib/jquery-1.10.1.min.js"></script>
+        <script src="js/lib/jquery-1.10.2.min.js"></script>
         <script src="js/lib/prettify.js"></script>
         <script src="js/reader.js"></script>
     </body>
