--- a/reader.html
+++ b/reader.html
@@ -1,26 +1,30 @@
 ﻿<!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8"/>
-        <title>JiZhu Reader</title>
-        <link rel="stylesheet" href="css/prettify.css" />
-        <link rel="stylesheet" href="css/reader.css" />
-        <base target="_blank" />
-    </head>
-    <body>
-	<section class="jz-sider" id="jz-sider">
-	    <div class="jz-actionbtn jz-closebtn" id="jz-closebtn"></div>
-	    <div class="jz-actionbtn jz-editbtn" id="jz-editbtn"></div>
-	    <div class="jz-actionbtn jz-printbtn" id="jz-printbtn"></div>
-	    <div class="jz-actionbtn jz-helpbtn" id="jz-helpbtn"></div>
-	</section>
-        <section class="jz-contentwrap" id="jz-contentwrap">
-            <div class="jz-title" id="jz-title"></div>
-            <div class="jz-subtitle" id="jz-subtitle"></div>
-            <article class="jz-article loading" id="jz-article"></article>
-        </section>
-        <script src="js/lib/jquery-1.10.2.min.js"></script>
-        <script src="js/lib/prettify.js"></script>
-        <script src="js/reader.js"></script>
-    </body>
+<head>
+    <meta charset="utf-8"/>
+    <title>JiZhu Reader</title>
+    <link rel="stylesheet" href="css/prettify.css"/>
+    <link rel="stylesheet" href="css/reader.css"/>
+    <base target="_blank"/>
+</head>
+<body>
+<section class="jz-sider" id="jz-sider">
+    <div class="jz-actionbtn jz-closebtn" id="jz-closebtn"></div>
+    <div class="jz-actionbtn jz-editbtn" id="jz-editbtn"></div>
+    <div class="jz-actionbtn jz-printbtn" id="jz-printbtn"></div>
+    <div class="jz-actionbtn jz-helpbtn" id="jz-helpbtn"></div>
+</section>
+<section class="jz-contentwrap" id="jz-contentwrap">
+    <div class="jz-title" id="jz-title"></div>
+    <div class="jz-subtitle" id="jz-subtitle"></div>
+    <article class="jz-article loading" id="jz-article"></article>
+</section>
+<script src="js/lib/jquery-1.10.2.min.js"></script>
+<script src="js/lib/prettify.js"></script>
+<script src="js/lib/jps.js"></script>
+<script src="js/module.reader.main.js"></script>
+<script src="js/module.selectionword.js"></script>
+<script src="js/module.reader.js"></script>
+<script src="js/module.reader.shell.js"></script>
+</body>
 </html>
