--- a/reader.html
+++ b/reader.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8"/>
     <title>JiZhu Reader</title>
     <link rel="stylesheet" href="css/prettify.css"/>
-    <link rel="stylesheet" href="css/reader.css"/>
+    <link rel="stylesheet" href="css/module.reader.css"/>
+    <link rel="stylesheet" href="css/module.dictlayer.css"/>
     <base target="_blank"/>
 </head>
 <body>
@@ -22,8 +23,10 @@
 <script src="js/lib/jquery-1.10.2.min.js"></script>
 <script src="js/lib/prettify.js"></script>
 <script src="js/lib/jps.js"></script>
+<script src="js/lib/mustache.js"></script>
 <script src="js/module.reader.main.js"></script>
-<script src="js/module.selectionword.js"></script>
+<script src="js/module.selectionphrase.js"></script>
+<script src="js/module.dictlayer.js"></script>
 <script src="js/module.reader.js"></script>
 <script src="js/module.reader.shell.js"></script>
 </body>
