--- a/reader.html
+++ b/reader.html
@@ -24,7 +24,7 @@
 <script src="js/lib/prettify.js"></script>
 <script src="js/lib/jps.js"></script>
 <script src="js/lib/mustache.js"></script>
-<script src="js/module.reader.main.js"></script>
+<script src="js/module.common.shell.js"></script>
 <script src="js/module.selectionphrase.js"></script>
 <script src="js/module.dictlayer.js"></script>
 <script src="js/module.reader.js"></script>
