add evernote function

--- a/reader.html
+++ b/reader.html
@@ -5,6 +5,8 @@
     <title>JiZhu Reader</title>
     <link rel="stylesheet" href="css/prettify.css"/>
     <link rel="stylesheet" href="css/module.reader.css"/>
+    <link rel="stylesheet" href="css/module.modal.css"/>
+    <link rel="stylesheet" href="css/module.modal.evernote.css"/>
     <link rel="stylesheet" href="css/module.dictlayer.css"/>
     <base target="_blank"/>
 </head>
@@ -13,6 +15,7 @@
     <div class="jz-actionbtn jz-closebtn" id="jz-closebtn"></div>
     <div class="jz-actionbtn jz-editbtn" id="jz-editbtn"></div>
     <div class="jz-actionbtn jz-printbtn" id="jz-printbtn"></div>
+    <div class="jz-actionbtn jz-evernote" id="jz-evernote"></div>
     <div class="jz-actionbtn jz-helpbtn" id="jz-helpbtn"></div>
 </section>
 <section class="jz-contentwrap" id="jz-contentwrap">
@@ -25,9 +28,12 @@
 <script src="js/lib/jps.js"></script>
 <script src="js/lib/mustache.js"></script>
 <script src="js/module.common.shell.js"></script>
+<script src="js/module.util.js"></script>
 <script src="js/module.selectionphrase.js"></script>
 <script src="js/module.dictlayer.js"></script>
 <script src="js/module.reader.js"></script>
+<script src="js/module.modal.js"></script>
+<script src="js/module.evernote.savemodal.js"></script>
 <script src="js/module.reader.shell.js"></script>
 </body>
 </html>
