--- a/reader.html
+++ b/reader.html
@@ -8,17 +8,18 @@
     <link rel="stylesheet" href="css/module.dictlayer.css"/>
     <base target="_blank"/>
 </head>
-<body>
-<section class="jz-sider" id="jz-sider">
-    <div class="jz-actionbtn jz-closebtn" id="jz-closebtn"></div>
-    <div class="jz-actionbtn jz-editbtn" id="jz-editbtn"></div>
-    <div class="jz-actionbtn jz-printbtn" id="jz-printbtn"></div>
-    <div class="jz-actionbtn jz-helpbtn" id="jz-helpbtn"></div>
-</section>
+<body class="fiction-theme">
 <section class="jz-contentwrap" id="jz-contentwrap">
     <div class="jz-title" id="jz-title"></div>
     <div class="jz-subtitle" id="jz-subtitle"></div>
     <article class="jz-article loading" id="jz-article"></article>
+</section>
+<section class="jz-sider" id="jz-sider">
+    <div class="jz-actionbtn jz-closebtn" id="jz-closebtn"></div>
+    <div class="jz-actionbtn jz-editbtn" id="jz-editbtn"></div>
+    <div class="jz-actionbtn jz-themebtn" id="jz-themebtn"></div>
+    <div class="jz-actionbtn jz-printbtn" id="jz-printbtn"></div>
+    <div class="jz-actionbtn jz-helpbtn" id="jz-helpbtn"></div>
 </section>
 <script src="js/lib/jquery-1.10.2.min.js"></script>
 <script src="js/lib/prettify.js"></script>
