--- a/reader.html
+++ b/reader.html
@@ -5,10 +5,12 @@
     <title>JiZhu Reader</title>
     <link rel="stylesheet" href="css/prettify.css"/>
     <link rel="stylesheet" href="css/module.reader.css"/>
+    <link rel="stylesheet" href="css/module.search.css"/>
     <link rel="stylesheet" href="css/module.dictlayer.css"/>
     <base target="_blank"/>
 </head>
 <body class="fiction-theme">
+<input type="search" placeholder="google/baidu search" results="5" autocomplete="off"/>
 <section class="jz-contentwrap" id="jz-contentwrap">
     <div class="jz-title" id="jz-title"></div>
     <div class="jz-subtitle" id="jz-subtitle"></div>
@@ -28,6 +30,7 @@
 <script src="js/module.selectionphrase.js"></script>
 <script src="js/module.dictlayer.js"></script>
 <script src="js/module.reader.js"></script>
+<script src="js/module.search.js"></script>
 <script src="js/module.reader.shell.js"></script>
 </body>
 </html>
