--- a/reader.html
+++ b/reader.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="css/module.dictlayer.css"/>
     <base target="_blank"/>
 </head>
-<body class="fiction-theme">
-<input type="search" placeholder="google/baidu search" results="5" autocomplete="off"/>
+<body>
+<input type="text" placeholder="google/baidu search" id="search-box"/>
 <section class="jz-contentwrap" id="jz-contentwrap">
     <div class="jz-title" id="jz-title"></div>
     <div class="jz-subtitle" id="jz-subtitle"></div>
